--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.sql linguist-detectable=true
-*.sql linguist-language=SQL
+
+Olympic_Games_Database_System/dbs_olympic_game_22663281/*.sql linguist-detectable=true
+Olympic_Games_Database_System/dbs_olympic_game_22663281/*.sql linguist-language=SQL
