--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 
+
+
 Olympic_Games_Database_System/dbs_olympic_game_22663281/*.sql linguist-detectable=true
 Olympic_Games_Database_System/dbs_olympic_game_22663281/*.sql linguist-language=SQL
-*.ino linguist-language=Arduino
-*.ino linguist-detectable=true
 
+*.ino linguist-language=C++
+*.ino linguist-detectable=true
 
